--- a/src/lib_picTMS99XX/dox.cfg
+++ b/src/lib_picTMS99XX/dox.cfg
@@ -1,4 +1,4 @@
-PROJECT_NAME           = TMS9928
+PROJECT_NAME           = TMS99XX
 PROJECT_NUMBER         = 1.0
 OUTPUT_DIRECTORY       = ./doxygen
 CREATE_SUBDIRS         = NO
